use_undefined_identifier/c3/setup_attackers
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/setup_attackers/src/see.c:636:8: error: use of undeclared identifier 'dword_66859C'
v18 = &dword_66859C[v3]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/setup_attackers/src/obj/see.o] Error 1
